# SE_DAY4_Software-Project-Management

./: README.md
StudioProjects/laundry/src/common/: spec.md
StudioProjects/laundry/src/web/: docker-compose.yml
StudioProjects/laundry/src/web/wash_hub_app/: Dockerfile  package-lock.json  package.json
StudioProjects/laundry/src/web/wash_hub_app/app/: layout.tsx  page.tsx
StudioProjects/laundry/src/web/wash_hub_app/components/: BusinessBenefits.tsx  Features.tsx  Hero.tsx  Navbar.tsx  ParallaxEffects.tsx  ServiceShowcase.tsx  Testimonials.tsx
StudioProjects/laundry/src/web/wash_hub_app/components/forms/: BusinessSignupForm.tsx  UserSignupForm.tsx
StudioProjects/laundry/src/web/wash_hub_app/lib/: api-client.ts
StudioProjects/laundry/src/web/wash_hub_backend/: Dockerfile  README.md  main.py  pyproject.toml
StudioProjects/laundry/src/web/wash_hub_backend/src/config/: database.py
StudioProjects/laundry/src/web/wash_hub_backend/src/controller/: business_lead_controller.py  user_lead_controller.py
StudioProjects/laundry/src/web/wash_hub_backend/src/dao/: business_lead_dao.py  user_lead_dao.py
StudioProjects/laundry/src/web/wash_hub_backend/src/dto/: business_lead_dto.py  user_lead_dto.py
StudioProjects/laundry/src/web/wash_hub_backend/src/model/: business_lead.py  user_lead.py
StudioProjects/laundry/src/web/wash_hub_backend/src/service/: business_lead_service.py  user_lead_service.py
StudioProjects/laundry/src/web/wash_hub_caddy/: Caddyfile
