[tool.poetry]
name = "wash_hub"
version = "0.1.0"
description = "Wash Hub Backend API"
authors = ["Wash Hub Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlmodel = "^0.0.14"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.6.0"}
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
